--- a/dlgcontractdata.ui
+++ b/dlgcontractdata.ui
@@ -182,7 +182,7 @@
         </widget>
        </item>
        <item row="1" column="1">
-        <widget class="QDateEdit" name="dateSpectReturn">
+        <widget class="QDateEdit" name="dateSpecReturn">
          <property name="calendarPopup">
           <bool>true</bool>
          </property>
@@ -567,6 +567,12 @@
       <widget class="QPushButton" name="btnOk">
        <property name="text">
         <string>Сохранить</string>
+       </property>
+       <property name="default">
+        <bool>true</bool>
+       </property>
+       <property name="flat">
+        <bool>false</bool>
        </property>
       </widget>
      </item>
