--- a/dlgcontractdata.ui
+++ b/dlgcontractdata.ui
@@ -497,7 +497,7 @@
                </size>
               </property>
               <property name="text">
-               <string>+</string>
+               <string>&lt;-</string>
               </property>
              </widget>
             </item>
@@ -510,7 +510,20 @@
                </size>
               </property>
               <property name="text">
-               <string>-</string>
+               <string>-&gt;</string>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <widget class="QPushButton" name="btnNewProduct">
+              <property name="maximumSize">
+               <size>
+                <width>20</width>
+                <height>20</height>
+               </size>
+              </property>
+              <property name="text">
+               <string>+</string>
               </property>
              </widget>
             </item>
