--- a/dlgcontractdata.ui
+++ b/dlgcontractdata.ui
@@ -432,6 +432,9 @@
        </item>
        <item row="2" column="0">
         <widget class="QLabel" name="lblManufPlanDate">
+         <property name="enabled">
+          <bool>false</bool>
+         </property>
          <property name="text">
           <string>manufplandate</string>
          </property>
@@ -439,6 +442,9 @@
        </item>
        <item row="2" column="1">
         <widget class="QDateEdit" name="dateManufPlan">
+         <property name="enabled">
+          <bool>false</bool>
+         </property>
          <property name="calendarPopup">
           <bool>true</bool>
          </property>
@@ -470,10 +476,16 @@
              <enum>QAbstractItemView::SelectRows</enum>
             </property>
             <attribute name="horizontalHeaderVisible">
-             <bool>false</bool>
+             <bool>true</bool>
             </attribute>
             <attribute name="horizontalHeaderDefaultSectionSize">
              <number>150</number>
+            </attribute>
+            <attribute name="horizontalHeaderHighlightSections">
+             <bool>false</bool>
+            </attribute>
+            <attribute name="horizontalHeaderShowSortIndicator" stdset="0">
+             <bool>false</bool>
             </attribute>
             <attribute name="horizontalHeaderStretchLastSection">
              <bool>true</bool>
