--- a/dlgcontractdata.ui
+++ b/dlgcontractdata.ui
@@ -466,6 +466,12 @@
          <layout class="QHBoxLayout" name="horizontalLayout_3">
           <item>
            <widget class="QTableView" name="tableProduct">
+            <property name="minimumSize">
+             <size>
+              <width>500</width>
+              <height>0</height>
+             </size>
+            </property>
             <property name="editTriggers">
              <set>QAbstractItemView::DoubleClicked|QAbstractItemView::SelectedClicked</set>
             </property>
