--- a/dlgproductcatalog.ui
+++ b/dlgproductcatalog.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>300</height>
+    <width>600</width>
+    <height>473</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -32,17 +32,23 @@
       </item>
       <item>
        <widget class="QTableView" name="tableProduct">
+        <property name="selectionMode">
+         <enum>QAbstractItemView::SingleSelection</enum>
+        </property>
         <property name="selectionBehavior">
          <enum>QAbstractItemView::SelectRows</enum>
         </property>
         <property name="sortingEnabled">
          <bool>true</bool>
         </property>
+        <attribute name="horizontalHeaderDefaultSectionSize">
+         <number>150</number>
+        </attribute>
         <attribute name="horizontalHeaderHighlightSections">
          <bool>false</bool>
         </attribute>
         <attribute name="horizontalHeaderMinimumSectionSize">
-         <number>50</number>
+         <number>150</number>
         </attribute>
         <attribute name="horizontalHeaderStretchLastSection">
          <bool>true</bool>
@@ -67,6 +73,13 @@
       <widget class="QPushButton" name="btnAddProduct">
        <property name="text">
         <string>Добавить</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="btnEditProduct">
+       <property name="text">
+        <string>Изменить</string>
        </property>
       </widget>
      </item>
